Seed data in docker

--- a/hr-app/server/config/values/Config.json
+++ b/hr-app/server/config/values/Config.json
@@ -2,7 +2,7 @@
     "config": {
         "serverSettings": {
             "port": 8080,
-            "dbConnectString": "mongodb://mongo:27017/mongo-test"
+            "dbConnectString": "mongodb://mongo:27017/employee"
         }
     }
 }
