--- a/hr-app/server/docker-compose.yml
+++ b/hr-app/server/docker-compose.yml
@@ -11,3 +11,7 @@ services:
         image: mongo
         ports:
             - "27017:27017"
+    mongo-seed:
+        build: ./mongo-seed
+        links:
+            - mongo
