--- a/hr-app/server/mongo-seed/Dockerfile
+++ b/hr-app/server/mongo-seed/Dockerfile
@@ -1,3 +1,3 @@
 FROM mongo
 COPY init.json /init.json
-CMD mongoimport --host mongo --db employee --collection users --type json --file /init.json --jsonArray
+CMD mongoimport --host mongo --db employee --collection users --mode upsert --upsertFields email,password,role,accountType --type json --file /init.json --jsonArray
